Fixed issues: DPS-26, DPS-27, DPS-28

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS 
     <meta name="description" content="">
     <meta name="keyword" content="">
     <meta name="format-detection" content="telephone=no"/>
-    <title>DPS - Device Pairing Subsystem</title>
+    <title>DPS</title>
   </head>
 
   <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
     <div id="root">
       <div class="page-loader">
-         <div class="loading" data-app-name="Device Pairing Subsystem">
+         <div class="loading" data-app-name="DPS">
            <div></div>
            <div></div>
            <div></div>
