--- a/public/index.html
+++ b/public/index.html
@@ -70,15 +70,15 @@ ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     var lang = localStorage.getItem('i18nextLng');
     if(lang === 'en')
     {
-      loaderElement.setAttribute("data-app-name", "Device Pairing System");
+      loaderElement.setAttribute("data-app-name", "Device Pairing Subsystem");
     }
     else if (lang === 'es')
     {
-      loaderElement.setAttribute("data-app-name", "Sistema de emparejamiento de dispositivos");
+      loaderElement.setAttribute("data-app-name", "Subsistema de emparejamiento de dispositivos");
     }
     else if (lang === 'id')
     {
-      loaderElement.setAttribute("data-app-name", "Sistem Pasangan Perangkat");
+      loaderElement.setAttribute("data-app-name", "Subsistem Pasangan Perangkat");
     }
 });
 </script>
